# kc-knowledge-base-sync

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/knowledge_base_sync/: __init__.py  __main__.py  cli.py  config.py  extract.py  format.py  lm_studio.py  publish.py
src/knowledge_base_sync/templates/: how-to-template.md
